--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <link rel="shortcut icon" href="dhar_sania.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <title>Future Blogs</title>
 </head>
 
 <body>
